clusters/izzy-cluster/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: router
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: router
  namespace: router
  labels:
    kubernetes.io/service-name: router
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 80  # using https causes a redirect to router.miwifi.com
endpoints:
  - addresses:
      - "192.168.100.1"
    conditions:
      ready: true
